--- a/sample_config.env
+++ b/sample_config.env
@@ -3,21 +3,21 @@
 
 #________COMPULSORY____________
 
-TG_BOT_TOKEN= ""
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
+TG_BOT_TOKEN= "2092606141:AAEdVJHcb3IwPBxknApQ_ofTDncp1mmnNb0"
+APP_ID = 13751988
+API_HASH = "8a885cc6e1ac3b96afdcfb976fd02118"
+OWNER_ID = 1237643807
 
 # Add different ID separated by a SPACE (Like :: AUTH_CHANNEL = -10012503747 -10012586941 539295917)
-AUTH_CHANNEL = 
+AUTH_CHANNEL = 1001790433174
 
 
 #__________NOT ________COMPULSORY____________ ::
 
 # For RCLONE ::
 # Name of the folder....not ID
-DESTINATION_FOLDER = "TorrentLeech-Gdrive"
-INDEX_LINK = ""
+DESTINATION_FOLDER = "sample"
+INDEX_LINK = "https://sample.tharshikan287.workers.dev/0:/"
 
 # OTHERS ::
 EDIT_SLEEP_TIME_OUT = 15
